panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_cv_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_cv_qualifiers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition a~0 `int volatile` ∅)
   (tentative-definition b~1 `int const volatile` ∅)
   (tentative-definition c~2 `int const volatile` ∅))

----- stderr -----
