panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_diagnostics_from_multiple_steps_are_sorted.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: duplicate declaration for `duplicate`
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:2:5]
   │
 1 │ int duplicate = 42;
   │     ────┬────  
   │         ╰────── previously defined here
 2 │ int duplicate = 27;
   │     ────┬────  
   │         ╰────── duplicate definition
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:3:1]
   │
 3 │ const type_missing;
   │ ──┬──  
   │   ╰──── type missing
───╯
