panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration a~0 `fn() -> int` ∅)
   (declaration b~1 `fn(∅: int) -> int` ∅)
   (declaration c~2 `fn(a: int) -> int` ∅)
   (declaration d~3 `fn(∅: int, ∅: int) -> int` ∅)
   (declaration e~4 `fn() -> ptr<int>` ∅)
   (tentative-definition f~5 `ptr<fn(∅: int) -> int>` ∅)
   (tentative-definition g~6 `ptr<fn(∅: ptr<int>) -> int>` ∅)
   (tentative-definition h~7 `ptr<fn(∅: fn() -> int) -> int>` ∅)
   (declaration i~8 `fn(a: fn() -> int) -> int` ∅)
   (declaration j~9 `fn(a: fn(∅: int) -> int) -> int` ∅)
   (declaration k~10 `fn(a: fn(a: int) -> int) -> int` ∅)
   (declaration l~11 `fn(∅: int, ∅: ptr<fn() -> int>) -> int` ∅))

----- stderr -----
