panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_multiple_variables_in_one_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_multiple_variables_in_one_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition a~0 `Int` ∅)
   (tentative-definition b~1 `Int` ∅)
   (tentative-definition c~2 `Int` ∅)
   (tentative-definition d~3 `ptr<Int>` ∅)
   (tentative-definition e~4 `ptr<Int>` ∅)
   (tentative-definition f~5 `Int` ∅)
   (tentative-definition g~6 `Int` ∅)
   (declaration h~7 `fn() -> Int` ∅)
   (declaration i~8 `fn(∅: Int) -> Int` ∅)
   (tentative-definition j~9 `Int` ∅))

----- stderr -----
