panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition x~0 `ptr<int>` ∅)
   (tentative-definition y~1 `ptr<int>` ∅)
   (tentative-definition a~2 `ptr<int const>` ∅)
   (tentative-definition b~3 `ptr<int> const` ∅)
   (tentative-definition c~4 `ptr<int const> const` ∅)
   (tentative-definition d~5 `ptr<int const>` ∅)
   (tentative-definition e~6 `ptr<int const> const` ∅)
   (tentative-definition f~7 `ptr<ptr<int>>` ∅)
   (tentative-definition g~8 `ptr<ptr<int const>>` ∅)
   (tentative-definition h~9 `ptr<ptr<int>> const` ∅)
   (tentative-definition i~10 `ptr<ptr<int> const>` ∅))

----- stderr -----
