panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_single_unnamed_void_param_is_no_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_single_unnamed_void_param_is_no_args.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration f~0 `fn() -> int` ∅)
   (declaration f~0 `fn() -> int` ∅))

----- stderr -----
