panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_tentative_definitions_with_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c"
   (declaration value~0 `int` ∅)
   (declaration value~0 `int` 42)
   (declaration value~0 `int` ∅))

----- stderr -----
